--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Etkinlik Takvimi 25-26</title>
+  <title>Etkinlik Takvimi 26</title>
   <style>
     :root {
       --bg:#0c111a; --panel:#0f1624; --panel-2:#101a2c; --accent:#72e3a6; --line:#1f2b3d;
@@ -118,6 +118,7 @@
   </script>
 </body>
 </html>
+
 
 
 
