--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="app">
     <section class="hero">
      
-      <h1>2025-2026 Etkinlik Takvimi</h1>
+      <h1>2026 Etkinlik Takvimi</h1>
       <div class="cta-row">
         <button class="button" id="jumpCurrent">Bu ayı vurgula</button>
         <div class="legend">
@@ -118,6 +118,7 @@
   </script>
 </body>
 </html>
+
 
 
 
