Update fmt.Println output from 'Hello World'

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="tabs" id="tabs">
       <button class="tab active" data-category="ULUSLARARASI">Uluslararası</button>
       <button class="tab" data-category="TURKIYE_GENELI">Türkiye Geneli</button>
-      <button class="tab" data-category="YARISMALAR">Yarışmalar</button>
+      <button class="tab" data-category="YARISMALAR">Ödüller</button>
     </nav>
 
     <div class="bar">
@@ -118,6 +118,7 @@
   </script>
 </body>
 </html>
+
 
 
 
